# hello-world

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: hello_world.cpp  hello_world.hpp  hello_world.test.cpp  main.cpp
